kubernetes/open-webui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: open-webui
  labels:
    app.kubernetes.io/name: open-webui
spec:
  selector:
    app.kubernetes.io/name: open-webui
  ports:
    - name: http
      port: 8080
      targetPort: 8080
